[workspace]
resolver = "2"
members = [
    "bign256",
    "bp256",
    "bp384",
    "k256",
    "p192",
    "p224",
    "p256",
    "p384",
    "p521",
    "ed448",
    "primefield",
    "primeorder",
    "sm2"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/zkcrypto/ff/pull/122
ff = { git = "https://github.com/zkcrypto/ff.git", branch = "release-0.14.0" }

# https://github.com/zkcrypto/group/pull/56
group = { git = "https://github.com/pinkforest/group.git", branch = "bump-rand-0.9" }

# https://github.com/RustCrypto/signatures/pull/913
ecdsa = { git = "https://github.com/RustCrypto/signatures.git" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures.git" }

elliptic-curve = { git = "https://github.com/RustCrypto/traits.git", rev = "204a4e030fa98863429ccd3797e12f9e7c45dc33" }
signature      = { git = "https://github.com/RustCrypto/traits.git" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }
